# edacious

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.prog  README  README.md  aeda.c  agar-eda.c  and.c  and.h  block.c  capacitor.c  capacitor.h  circle_tool.c  circuit.c  circuit.h  component.c  component.h  configure  configure.in  dc.c  dc.h  digital.c  digital.h  diode.c  diode.h  eda.c  eda.h  ground.c  ground.h  icons.agt  icons.h  icons_data.h  inductor.c  inductor.h  insert_tool.c  interpreteur.c  (+62 more)
SPARSE/: Makefile  readme  spallocate.c  spbuild.c  spconfig.h  spdefs.h  spdoc  spfactor.c  spfortran.c  spmatrix.h  spoutput.c  spsolve.c  sptest.c  sputils.c
Schematics/: Capacitor.eschem  Diode.eschem  Ground.eschem  Inductor.eschem  Makefile  NMOS.eschem  NPN.eschem  PMOS.eschem  PNP.eschem  Resistor.eschem  SPST.eschem  Transistor.eschem
Schematics/Digital/: AndGate.eschem  Inverter.eschem  Makefile  OrGate.eschem
Schematics/Sources/: Isource.eschem  Makefile  Varb.eschem  Vnoise.eschem  Vsine.eschem  Vsource.eschem  Vsquare.eschem  Vsweep.eschem
circuit/: .circuit.c.swp  .kvl.c.swp  Makefile  analysis.c  analysis.h  circuit.c  circuit.h  dc.c  insert_tool.c  kvl.c  mna.c  scope.c  scope.h  select_tool.c  sim.c  sim.h  spice.c  spice.h  wire.c  wire_tool.c
component/: Makefile  and.c  and.h  component.c  component.h  conductor.c  conductor.h  digital.c  digital.h  diode.c  ground.c  ground.h  inscom.c  inverter.c  inverter.h  led.c  led.h  logic_probe.c  logic_probe.h  or.c  or.h  resistor.c  resistor.h  selcom.c  semiresistor.c  semiresistor.h  spdt.c  spdt.h  spst.c  spst.h  vsource.c  vsource.h  wire.c
core/: ES_Circuit.3  Makefile  circuit.c  circuit.h  circuit_edit.c  component.c  component.h  component_edit.c  component_insert_tool.c  component_library.c  component_library.h  core.c  core.h  core_begin.h  core_close.h  core_internal.h  dc.c  dc.h  icons.agt  insert_tool.c  integration.c  integration.h  interpreteur.c  interpreteur.h  layout.c  layout.h  layout_block.c  layout_block.h  layout_edit.c  layout_node.c  layout_node.h  layout_node_tool.c  layout_select_tool.c  layout_trace.c  layout_trace.h  layout_trace_tool.c  library.c  library.h  mw.h  package.c  (+30 more)
doc/: Makefile  lec.bib  lec.tex
doc/fig/: cap.eps  diode.eps  gummel-poon.eps  npn.eps  pmos.eps
ecminfo/: Makefile  configure  configure.in  ecminfo.c
edacious-config/: Makefile  edacious-config.c
fig/: cap.eps  diode.eps  inductor.eps  nmos.eps  pnp.eps
generic/: Makefile  capacitor.c  capacitor.h  diode.c  diode.h  generic.c  generic.h  ground.c  ground.h  inductor.c  inductor.h  led.c  led.h  nmos.c  nmos.h  npn.c  npn.h  pmos.c  pmos.h  pnp.c  pnp.h  resistor.c  resistor.h  semiresistor.c  semiresistor.h  spdt.c  spdt.h  spst.c  spst.h
gui/: Makefile  edacious.1  main.c
macro/: Makefile  and_gate.c  and_gate.h  digital.c  digital.h  inverter.c  inverter.h  logic_probe.c  logic_probe.h  macro.c  macro.h  or_gate.c  or_gate.h
matlab/: absolute1.m  absolute2.m  capacitor.m  diode.m  inverter.m  npn.m  twodiode.m
measurement/: Makefile  scope.h
mk/: build.prog.mk  csoft.common.mk  csoft.den.mk  csoft.dep.mk  csoft.doc.mk  csoft.lib.mk  csoft.po.mk  csoft.prog.mk  csoft.subdir.mk  dist.sh  mkconcurrent.pl  mkdep  release.sh
mk/libtool/: configure.in
pixmaps/: Makefile  tools.xcf
po/: Makefile  fr.po
schem/: Makefile  block.c  block.h  circle_tool.c  line_tool.c  point_tool.c  port.c  port.h  port_tool.c  proximity_tool.c  schem.c  schem.h  schem_circle.c  schem_line.c  schem_point.c  schem_port.c  schem_port.h  schem_proximity.c  schem_select.c  schem_text.c  schem_wire.c  schem_wire.h  select_tool.c  text_tool.c  tools.h  wire.c  wire.h  wire_tool.c
sources/: Makefile  isource.c  isource.h  sources.c  sources.h  varb.c  varb.h  vnoise.c  vnoise.h  vsine.c  vsine.h  vsource.c  vsource.h  vsquare.c  vsquare.h  vsweep.c  vsweep.h
tests/: 555_MOSFET.ecm  6012sweep.ecm  AstableMultivibrator.ecm  CMOSInverter.ecm  CascodeDiffAmp.ecm  DiffAmp555.ecm  DiffAmpDarlington555.ecm  DiffLee.ecm  ERC.ecm  FullWaveRectifier.ecm  HalfWaveRectifier.ecm  HighGain.ecm  MemoryCell.ecm  NAND_CMOS.ecm  NMOS_CurrentMirror.ecm  NPN_Diode.ecm  NPN_vBE_TransferCurve.ecm  NPN_vCE_TransferCurve.ecm  PNP_Diode.ecm  PNP_vEB_TransferCurve.ecm  PNP_vEC_TransferCurve.ecm  PullDownInverterPMOS.ecm  PullDownInverterPNP.ecm  PullUpInverterNMOS.ecm  PullUpInverterNPN.ecm  SPST.ecm  SRD.ecm  SRLC.ecm  TTLInverter.ecm  TTL_NAND.ecm
tools/: Makefile  avreg.c  capacitance.c  current.c  impedance.c  length.c  lm555.c  power.c  pressure.c  resistance.c  resistivity.c  rmsvoltage.c  time.c  voltage.c  wavecomb.c  weight.c
transient/: Makefile  transient.c
