# Public domain

REGISTER("--enable-static",	"Produce a static binary [default: no]")
REGISTER("--enable-warnings",	"Suggested compiler warnings [default: no]")

C_DEFINE(_USE_AGAR_QUEUE)
C_DEFINE(_USE_AGAR_STD)

CHECK(cc)
CHECK(agar, 1.3)
CHECK(agar-vg, 1.3)
CHECK(freesg, 1.0)
CHECK(edacious, 1.0)
CHECK(getopt)

if [ "${HAVE_AGAR}" != "yes" -o "${HAVE_AGAR_VG}" != "yes" ]; then
	echo "This application requires the Agar library."
	exit 1
fi
if [ "${HAVE_FREESG}" != "yes" ]; then
	echo "This application requires the FreeSG library."
	exit 1
fi
if [ "${HAVE_EDACIOUS}" != "yes" ]; then
	echo "This application requires an installed Edacious library."
	exit 1
fi

C_INCDIR($SRC)

if [ "${enable_warnings}" = "yes" ]; then
	C_OPTION(-Wall)
	C_OPTION(-Werror)
	C_OPTION(-Wmissing-prototypes)
fi
if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi
